# Agent-Infrastructure-SaaS

./: .env.example  .gitignore  README.md  RUNNING.md  docker-compose.yml
backend/: .gitkeep  README.md  config.py  langraph_orchestrator.py  main.py  poetry.toml  pyproject.toml
backend/agent/: orchestrator.py  state.py
backend/agent/agents/: __init__.py  base.py  cost.py  deploy.py  infrastructure.py  monitoring.py  optimization.py  planner.py
backend/llm/: config.yaml  factory.py
backend/observability/: logger.py
backend/tests/: conftest.py  test_flow.py
backend/tools/: tools.py
docs/: .gitkeep
frontend/: .gitkeep  package-lock.json  package.json
frontend/app/: components.tsx  globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts
infra/: .gitkeep
