[tool.poetry]
# This backend is an application, not an installable library, so we run in
# package-mode = false: `poetry install` provisions the virtualenv and
# dependencies without trying to build/install the project itself.
package-mode = false
name = "agent-infrastructure-backend"
version = "0.1.0"
description = "Backend services for Agent Infrastructure SaaS (FastAPI + LangGraph multi-agent system)."
authors = ["Camrahd"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.0"
uvicorn = { extras = ["standard"], version = ">=0.32.0" }
pydantic = ">=2.9.0"
pydantic-settings = ">=2.6.0"
langgraph = ">=0.2.50"
langchain = ">=0.3.0"
langchain-openai = ">=0.2.0"
python-dotenv = ">=1.0.1"
pyyaml = ">=6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
pytest-asyncio = ">=0.24.0"
httpx = ">=0.27.0"
ruff = ">=0.7.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
